--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 p{
     color: orangered;
 }
+
+.education{
+    border: 2px solid black;
+    border-radius: 5px;
+    color: white;
+    padding: 10px;
+}
